# todo-app-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: app.py
src/clients/: fileio.py
src/commands/: commands.py  exceptions.py
src/handlers/: todos.py
src/services/: todos.py
src/validators/: todos.py
tests/: test_app.py
tests/clients/: test_fileio.py
tests/commands/: test_commands.py
tests/handlers/: test_todos.py
tests/services/: test_todos.py
tests/validators/: test_todos.py
