[tool.poetry]
name = "todo-app-cli"
version = "0.1.0"
description = "This app is a CRUD cli tool to manage todos."
authors = ["architMahto <architmahto@gmail.com>"]
readme = "README.md"

[tool.poe.tasks]
run_app="python main.py"
test = "pytest -v ./tests"
test_coverage = "pytest -v --cov=src --cov-report term ./tests"
test_coverage_html = "pytest -v --cov=src --cov-report html ./tests"
lint = "pylint src"
format = "python -m black src"

[tool.poetry.dependencies]
python = "^3.12"
[tool.poetry.group.test.dependencies]
pylint = "^3.2.6"
pytest = "^8.3.3"
pytest-mock = "*"
coverage = "^7.6.0"
pynose = "^1.5.2"
pytest-cov = "^5.0.0"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[coverage-threshold]
line_coverage_min = 90
file_line_coverage_min = 90
branch_coverage_min = 80
file_branch_coverage_min = 80
