[tool.poetry]
name = "todo-app-cli"
version = "0.1.0"
description = "This app is a CRUD cli tool to manage todos."
authors = ["architMahto <architmahto@gmail.com>"]
readme = "README.md"

[tool.poe.tasks]
run_app="python main.py"
test = "pytest -v ./tests"
lint = "pylint src"
format = "python -m black src"
bundle = "pyinstaller --onefile main.py"
build = ["clean", "bundle"]
[tool.poe.tasks.clean]
shell = "rm -rf build dist *.egg-info"
interpreter = "bash"

[tool.poetry.dependencies]
python = "3.12.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-mock = "*"
pytest-cov = "^5.0.0"
black = "^24.8.0"
pyinstaller = "^6.10.0"
pylint = "^3.3.1"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report term --cov-report html --cov-branch --cov-fail-under=90"

[tool.pylint.main]
fail-on = "missing-function-docstring"
fail-under = 10.0
output-format = "colorized"
py-version = "3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
